Fixing player bottom position, nav overflow content and main content.

--- a/src/style.css
+++ b/src/style.css
@@ -37,11 +37,14 @@ body {
 .flex__col {
     display: flex;
     flex-flow: column;
+    height: 100%;
+    overflow-y: hidden;
 }
 
 .flex__content {
     display: flex;
     flex-flow: row;
+    height: 90%;
 }
 
 .nav__list {
@@ -62,9 +65,10 @@ li.active, span.active {
 
 .user__lib {
     background-color: #000000;
-    min-width: 165px;
+    min-width: 170px;
     padding: 60px 20px;
     font-size: 15px;
+    overflow-y: scroll;
 }
 
 .icon__list li {
@@ -97,7 +101,8 @@ hr {
 .main__content {
     background-color: #212121;
     width: 100%;
-    padding: 20px 30px;
+    padding: 30px;
+    overflow-y: scroll;
 }
 
 span.arrow {
@@ -107,6 +112,7 @@ span.arrow {
 
 .w__color {
     color: #ffffff;
+    margin: 0;
 }
 
 .user__drop {
@@ -117,6 +123,7 @@ span.arrow {
 
 span.acc__circle {
     font-size: 24px;
+    margin-right: 5px;
 }
 
 .good {
@@ -127,6 +134,10 @@ span.acc__circle {
     font-size: 30px;
     color: #ffffff;
     font-weight: bold;
+}
+
+.other__albums {
+    margin-bottom: 30px;
 }
 
 .last__played {
@@ -210,6 +221,11 @@ footer.m__player {
     flex-flow: row;
     justify-content: space-between;
     align-items: center;
+
+    position: fixed;
+    bottom: 0;
+    width: -webkit-fill-available;
+    height: 10%;
 }
 
 .playing {
